@@ -3,5 +3,7 @@
 winevent.h
 winevent.rc
 MSG00409.bin
-/nut_build/
-/nut_install/
+/nut_build_*/
+/nut_install_*/
+/nut_build
+/nut_install
