@@ -12,16 +12,6 @@ SCRIPTDIR="`cd "$SCRIPTDIR" && pwd`"
 
 DLLLDD_SOURCED=true . "${SCRIPTDIR}/dllldd.sh"
 
-# default to update source then build
-
-# These paths are somewhat related:
-[ -n "${WINDIR-}" ] || WINDIR="$(pwd)"
-[ -n "${TOP_DIR-}" ] || TOP_DIR="$WINDIR/../.."
-
-# These may be located elsewhere:
-[ -n "${BUILD_DIR-}" ] || BUILD_DIR="$WINDIR/nut_build"
-[ -n "${INSTALL_DIR-}" ] || INSTALL_DIR="$WINDIR/nut_install"
-
 # This should match the tarball and directory name,
 # if a stable version is used:
 [ -n "$VER_OPT" ] || VER_OPT=2.8.2
@@ -32,13 +22,49 @@ DEBUG=true
 # those DLLs should correspond to same architecture selection
 cmd=all32
 if [ -n "$1" ] ; then
-	cmd=$1
+	cmd="$1"
 fi
 
+if [ "$cmd" == "all64" ] || [ "$cmd" == "b64" ] || [ "$cmd" == "all32" ] || [ "$cmd" == "b32" ] ; then
+	ARCH="x86_64-w64-mingw32"
+	if [ "$cmd" == "all32" ] || [ "$cmd" == "b32" ] ; then
+		ARCH="i686-w64-mingw32"
+	fi
+else
+	echo "Usage:"
+	echo "		$0 [all64 | b64 | all32 | b32]"
+	echo "		Default: 'all32'"
+	echo "Optionally export SOURCEMODE=[stable|dist|out-of-tree]"
+	case "${cmd}" in
+		-h|--help|help) exit 0 ;;
+		*) exit 1 ;;
+	esac
+fi
+
+# These paths are somewhat related:
+[ -n "${WINDIR-}" ] || WINDIR="$(pwd)"
+[ -n "${TOP_DIR-}" ] || TOP_DIR="$WINDIR/../.."
+
+# These may be located elsewhere:
+[ -n "${BUILD_DIR-}" ] || BUILD_DIR="$WINDIR/nut_build_${ARCH}"
+[ -n "${INSTALL_DIR-}" ] || INSTALL_DIR="$WINDIR/nut_install_${ARCH}"
+
+# Convenience symlink to find the latest completed build workspace and
+# installed results; not used by the script other than updating the symlink:
+[ -n "${BUILD_DIR_SYMLINK-}" ] || BUILD_DIR_SYMLINK="$WINDIR/nut_build"
+[ -n "${INSTALL_DIR_SYMLINK-}" ] || INSTALL_DIR_SYMLINK="$WINDIR/nut_install"
+
+rm -rf "$BUILD_DIR" "$INSTALL_DIR" "$BUILD_DIR_SYMLINK" "$INSTALL_DIR_SYMLINK"
+if [ x"$BUILD_DIR" != x"$BUILD_DIR_SYMLINK" ] ; then
+	ln -fsr "$BUILD_DIR" "$BUILD_DIR_SYMLINK"
+fi
+if [ x"$INSTALL_DIR" != x"$INSTALL_DIR_SYMLINK" ] ; then
+	ln -fsr "$INSTALL_DIR" "$INSTALL_DIR_SYMLINK"
+fi
+
+CONFIGURE_SCRIPT="./configure"
 [ -n "$SOURCEMODE" ] || SOURCEMODE="out-of-tree"
 
-rm -rf "$BUILD_DIR" "$INSTALL_DIR"
-CONFIGURE_SCRIPT="./configure"
 case "$SOURCEMODE" in
 stable)
 # FIXME
@@ -57,7 +83,7 @@ dist)
 	rm -f nut-?.?.?*.tar.gz
 	[ -s Makefile ] || { ./autogen.sh && ./configure; }
 	make dist
-	SRC_ARCHIVE=$(ls -1 nut-?.?.?*.tar.gz | sort -n | tail -1)
+	SRC_ARCHIVE="$(ls -1 nut-?.?.?*.tar.gz | sort -n | tail -1)"
 	cd scripts/Windows
 	tar -xzf "../../$SRC_ARCHIVE"
 	mv nut-?.?.?* "$BUILD_DIR"
@@ -76,18 +102,13 @@ out-of-tree)
 	;;
 esac
 
-cd "$BUILD_DIR" || exit
-
 if [ -z "$INSTALL_WIN_BUNDLE" ]; then
 	echo "NOTE: You might want to export INSTALL_WIN_BUNDLE=true to use main NUT Makefile"
 	echo "recipe for DLL co-bundling (default: false to use logic maintained in $0"
 fi >&2
 
-if [ "$cmd" == "all64" ] || [ "$cmd" == "b64" ] || [ "$cmd" == "all32" ] || [ "$cmd" == "b32" ] ; then
-	ARCH="x86_64-w64-mingw32"
-	if [ "$cmd" == "all32" ] || [ "$cmd" == "b32" ] ; then
-		ARCH="i686-w64-mingw32"
-	fi
+do_build_mingw_nut() {
+	cd "$BUILD_DIR" || exit
 
 	HOST_FLAG="--host=$ARCH"
 	# --build needs to be specified, beside of --host, to avoid Warning
@@ -197,9 +218,6 @@ if [ "$cmd" == "all64" ] || [ "$cmd" == "b64" ] || [ "$cmd" == "all32" ] || [ "$
 
 	echo "$0: install phase complete ($?)" >&2
 	cd ..
-else
-	echo "Usage:"
-	echo "		$0 [all64 | b64 | all32 | b32]"
-	echo "		Default: 'all32'"
-	echo "Optionally export SOURCEMODE=[stable|dist|out-of-tree]"
-fi
+}
+
+do_build_mingw_nut
